# repo-agent

./: .env.example  .gitignore  Makefile  README.md  README_CN.md  analysis_results.txt  config.py  evaluation_results.out  evaluation_results_1.out  main.py  prompt.py  pyproject.toml  server.py
agents/: base_agent.py  code_analysis_agent.py  doc_generation_agent.py  rag_agent.py  repo_info_agent.py  summary_agent.py  supervisor_agent.py  test_agent.py  tools.py  wiki_agent.py
agents/moe_agent/: incremental_update_agent.py  macro_doc_agent.py  module_clusterer.py  module_doc_agent.py  moe_agent.py  prompt.py  repo_info_agent.py  summarization.py  utils.py
agents/sub_graph/: code.py  parent.py  prompt.py  repo.py  utils.py
app/: .env.example  .gitignore  config.py
app/api/: agent_test.py  agents.py  rag.py  router.py
app/models/: agents.py  common.py  rag.py
app/services/: agent_service.py  rag_service.py
display/: README.md  book.json
docs/: API.md  Frontend.md
tests/: test_agent.py  test_moa.py  test_rag.py  test_subgraph.py
tests/LaaJ/: evaluate.py  judge.py
tests/llm_compiler/: constants.py  joiner.py  llm_compiler.py  log.py  output_parser.py  planner.py  task_fetching_unit.py
tests/moe_agent/: context_tools.py  incremental_update_agent.py  macro_doc_agent.py  module_clusterer.py  module_doc_agent.py  moe_agent.py  repo_info_agent.py  repo_utils.py  summarization.py
tests/multi_lang_tree/: call_tree.py  main.py  show_tree.py  simplify_tree.py
tests/sub-graph-agent/: example.py  graph.py
utils/: code_analyzer.py  file.py  repo.py
web/: .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json
web/src/: App.vue  style.css
web/src/components/: AskBox.vue  DocContent.vue  Header.vue  HistoryButton.vue  HomeButton.vue  InfoCard.vue  InputSection.vue  LargeChat.vue  ProgressBar.vue  RepoHeader.vue  ThemeToggle.vue  TocSidebar.vue  TopControls.vue
web/src/pages/: History.vue  Home.vue  RepoDetail.vue
web/src/router/: index.ts
web/src/types/: shims.d.ts
web/src/utils/: request.ts
