[project]
name = "wiki-agent"
version = "0.1.0"
description = "A agent to generate repo markdown automatically"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "PyGithub>=2.0.0",
    "requests>=2.32.0",
    "tqdm>=4.67.1",
    "langgraph>=0.2.0",
    "langchain-ollama>=0.2.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "langchain-deepseek>=0.1.4",
    "tree-sitter>=0.24.0",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-rust>=0.24.0",
    "langgraph-supervisor>=0.0.29",
    "langgraph-swarm>=0.0.14",
]

[tool.setuptools.packages.find]
include = ["agents*", "assets*", "display*", "utils*"]